﻿Subtitle Edit Changelog

3.6.2 BETA (xth July 2021)
* NEW:
   * Keep ASSA override tags (no html for italic/font etc. in text box)
   * ASSA override tag helper (shortcut + custom templates)
   * Shortcuts for video contrast/brightness (mpv only)
   * Waveform "Right-click + Ctrl" will toggle select of a subtitle
   * Waveform "Right-click + Shift" will select a range subtitles
   * Add a few profiles for Amazon Prime
   * Add new FCE rule: "Remove first dash in non-dialogs" 
* IMPROVED:
   * Update Bulgarian translation - thx Калин
   * Update Chinese translation - thx nkh0472
   * Update Polish translation - thx admas
   * Update Portuguese translation - thx hugok79
   * Update Hungarian translation - thx Zityi
   * ASSA: Support for ScalingX/ScalingY/Spacing/Angle/Strikeout - thx ausencia
   * MPC: Try to search for mpc-be too - thx Fábio
   * Shortcut F5 is now "Play selected lines"
   * Support read of time codes with format "<number>f" in TTML - thx LeonCheung
   * Improve waveform support for SMPTE timing (drop frame) - thx Paulo
   * Try to pick best image for bdsup with fading - thx peter-qgd
   * Adhere to max number of lines - thx Andrebavila
   * Optimize "modify selection - styles"
   * Installer: Update Inno Setup from version 5 to version 6
   * Installer: Use ngen64 on 64-bit - thx XhmikosR
* FIXED:
   * Fix load/save some ASSA storage style settings - thx Andrebavila
   * Fix for italic in DCinemaSmpte2007/2010/2014 - thx Marko
   * Minor fix for "Remove text for HI" - thx igenaya
   * Minor fix for split with zero time codes - thx darnn


3.6.1 (20th May 2021)
* NEW:
   * Add "Subtitle formats" settings - thx OmrSi
   * ASSA attachments manager - thx LeonCheung
   * Add Categories in ASSA style manager - thx ChocOranger/OmrSi
   * Auto load ASSA styles for new files - thx z3us/OmrSi
   * Add support for attached fonts in ASSA style manager
   * Add "Apply" button in ASSA style manager - thx LeonCheung